# next.js

./: .alexignore  .eslintignore  .eslintrc.json  .gitignore  .oxfmtignore  .prettierignore  AGENTS.md  BOUNDARY_TYPE_ANALYSIS.md  Cargo.toml  eslint.config.mjs  jest.config.js  lerna.json  lint-staged.config.js  not-staged-diffs.txt  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run-tests.js  rust-toolchain.toml  tsconfig.json  tsec-exemptions.json
.buddy/: asw.fixed.yml
.cargo/: config.toml
crates/next-code-frame/: COLUMN_SEMANTICS.md  Cargo.toml  README.md
crates/next-code-frame/examples/: comments_punctuation_demo.rs  complete_highlighting_demo.rs  highlighting_demo.rs
crates/next-code-frame/src/: .tests.rs.pending-snap  frame.rs  highlight.rs  lib.rs  terminal.rs  tests.rs
crates/next-code-frame/src/snapshots/: next_code_frame__tests__context_lines.snap  next_code_frame__tests__gutter_width_alignment.snap  next_code_frame__tests__invalid_column_both_out_of_bounds.snap  next_code_frame__tests__invalid_column_start_out_of_bounds.snap  next_code_frame__tests__invalid_line_number.snap  next_code_frame__tests__invalid_multiline_end_column_out_of_bounds.snap  next_code_frame__tests__large_file.snap  next_code_frame__tests__long_error_span.snap  next_code_frame__tests__long_line_at_end.snap  next_code_frame__tests__long_line_at_start.snap  next_code_frame__tests__long_line_multiline_aligned.snap  next_code_frame__tests__long_line_single_error.snap  next_code_frame__tests__markdown_file.snap  next_code_frame__tests__multiline_error.snap  next_code_frame__tests__multiline_error_with_message.snap  next_code_frame__tests__simple_single_line_error.snap  next_code_frame__tests__single_char.snap  next_code_frame__tests__three_chars.snap  next_code_frame__tests__with_message.snap
crates/next-persistence-tools/: Cargo.toml
crates/next-persistence-tools/src/: main.rs
turbopack/crates/turbo-persistence-tools/: Cargo.toml
turbopack/crates/turbo-persistence-tools/src/: main.rs
(+2299 files in other folders)
