[package]
name = "next-code-frame"
version = "0.0.1"
description = "Fast, scalable code frame rendering for Next.js error reporting"
license = "MIT"
edition = "2024"

[lib]
bench = false

[lints]
workspace = true

[profile.dev.package]
insta.opt-level = 3
similar.opt-level = 3

[dependencies]
anyhow = { workspace = true }
swc_ecma_lexer = "24.0.0"
swc_common = "15.0.0"
serde = { workspace = true }

[dev-dependencies]
insta = { version = "1.43.1", features = ["yaml"] }
